--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,30 +8,36 @@
             src="<%= listing.image %>" 
             class="card-img-top show-img" 
             alt="listing_image"
-        >
-        <div class="card-body">s
-            <p class="card-text">
-                <%= listing.description %> <br>
-                &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
-                <li><%= listing.location %></li> <br>
-                <li><%= listing.country %></li>
+        />
+        <div class="card-body">
+            <p class="card-text">Owned by<i><%= listing.owner.username %></i></p>
+
+            <p class="card-text"> <%= listing.description %> </p>
+            <p class="card-text"> 
+                &#8377; <%= listing.price.toLocaleString("en-IN") %> 
             </p>
+            <p class="card-text"> <%= listing.location %> </p>    
+            <p class="card-text"> <%= listing.country %></p> 
         </div>
     </div> 
 
+    
     <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" 
-        class="btn btn-dark col-1 offset-3 edit-btn"
-        >Edit
-        </a>
+        <a 
+            href="/listings/<%= listing._id %>/edit" 
+            class="btn btn-dark col-1 offset-3 edit-btn"
+            >Edit</a
+        >
 
         <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
             <button class="btn btn-dark offset-3">Delete</button>
         </form>
     </div>   
-    
-    <div class="col-8 offset-3 mb-3">
+
+
+    <div class="col-8 offset-3 mb-3">s
         <hr />
+        <% if(currUser) { %>
         <h4>Leave a Review</h4>
         <form 
             action="/listings/<%= listing.id %>/reviews" 
@@ -66,14 +72,15 @@
             <button class="btn btn-outline-dark">Submit</button>
             <br>
         </form>
-
+        <hr>
+        <% } %>
         <hr />
         <p><b>All Reviews</b></p>
         <div class="row">
         <% for(review of listing.reviews) { %>
             <div class="card col-5 ms-3 mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Jane Doe</h5>
+                    <h5 class="card-title">@<% review.author.username %></h5>
                     <p class="card-text"> <%= review.comment %> </p>
                     <p class="card-text"><%= review.rating %> stars</p>
                 </div>
